--- a/WPF/WPF/LZ77_Window.xaml
+++ b/WPF/WPF/LZ77_Window.xaml
@@ -1,29 +1,30 @@
-﻿<Window x:Class="WPF.LZW_Window"
+﻿<Window x:Class="WPF.LZ77_Window"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF"
         mc:Ignorable="d"
-        Title="LZW_Window" Height="450" Width="1010"
-        MinWidth="1010">
+        Title="LZ77_Window" Height="450" Width="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="0.4*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.45*"/>
+            <ColumnDefinition Width="0.5*"/>
             <ColumnDefinition Width="0.18*"/>
             <ColumnDefinition Width="0.45*"/>
         </Grid.ColumnDefinitions>
 
+        <TextBox x:Name="bufferSizeTB" Grid.Column="1" TextWrapping="Wrap">Enter buffer size: (10 by default)</TextBox>
+
         <TextBox x:Name="sourceTB" TextWrapping="Wrap">Enter message</TextBox>
 
         <TextBlock x:Name="outputTB" Grid.Row="0" Grid.Column="2" TextWrapping="Wrap"></TextBlock>
-        
+
         <StackPanel Grid.Row="1" Grid.Column="1">
-            <Button x:Name="startCmprBtn" FontSize="15" Click="StartCmprBtn_Click">Start compress</Button>
+            <Button x:Name="startCmprBtn" FontSize="15" Click="StartCmprBtn_Click" HorizontalAlignment="Right" Width="126">Start compress</Button>
             <Button x:Name="iterationCmprBtn" FontSize="15" Click="IterationCmprBtn_Click" IsEnabled="false">Compression iteration</Button>
             <Button x:Name="allCmprBtn" FontSize="15" IsEnabled="false" Click="AllCmprBtn_Click">Cmpress All</Button>
             <Button x:Name="startDecmprBtn" FontSize="15" IsEnabled="false" Click="StartDecmprBtn_Click">Start decompress</Button>
@@ -33,26 +34,20 @@
 
         <ScrollViewer Grid.Row="1" Grid.Column="0">
             <StackPanel x:Name="compressContainer" Grid.Row="1" Grid.Column="0">
-            <WrapPanel Orientation="Horizontal">
-                    <TextBox Width="80" TextAlignment="Center">Current sting</TextBox>
-                    <TextBox Width="90" TextAlignment="Center">Current symbol</TextBox>
-                    <TextBox Width="70" TextAlignment="Center">Next symbol</TextBox>
-                    <TextBox Width="35" TextAlignment="Center">Code</TextBox>
-                    <TextBox Width="50" TextAlignment="Center">Bits</TextBox>
-                    <TextBox Width="70" TextAlignment="Center">Ditionary</TextBox>
-            </WrapPanel>
+                <WrapPanel Orientation="Horizontal">
+                    <TextBox Width="130" TextAlignment="Center">Buffer</TextBox>
+                    <TextBox Width="130" TextAlignment="Center">Found Prefix</TextBox>
+                    <TextBox Width="60" TextAlignment="Center">Code</TextBox>
+                </WrapPanel>
             </StackPanel>
         </ScrollViewer>
 
         <ScrollViewer Grid.Row="1" Grid.Column="2">
             <StackPanel x:Name="decompressContainer" Grid.Row="1" Grid.Column="2">
-            <WrapPanel Orientation="Horizontal">
-                    <TextBox Width="90" TextAlignment="Center">Bits</TextBox>
-                    <TextBox Width="60" TextAlignment="Center">Code</TextBox>
-                    <TextBox Width="70" TextAlignment="Center">On exit</TextBox>
-                    <TextBox Width="80" TextAlignment="Center">Full note</TextBox>
-                    <TextBox Width="80" TextAlignment="Center">Partial note</TextBox>
-            </WrapPanel>
+                <WrapPanel Orientation="Horizontal">
+                    <TextBox Width="120" TextAlignment="Center">Code</TextBox>
+                    <TextBox Width="120" TextAlignment="Center">Answer</TextBox>
+                </WrapPanel>
             </StackPanel>
         </ScrollViewer>
     </Grid>
